ecmascript/parser/tests/test262-error-references/fail/d056300d8658429f.js.stderr
error: Unterminated block comment
 --> $DIR/tests/test262-parser/fail/d056300d8658429f.js:1:1
  |
1 | /* 
  | ^^^

